--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The brand of luxerious fashion</title>
+    <title>Registraion</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,6 +16,7 @@
 <body>
 
     <header class="header">
+
         <div class="container">
             <div class="header_wrapper">
                 <div class="header_controls">
@@ -92,168 +93,92 @@
                 </ul>
             </nav>
         </div>
+
+
     </header>
-    <main>
-        <section class="brand">
-            <img src="img/brand.jpg" alt="brand" width="800" height="765">
-            <div class="brand_title-wrapper">
-                <h1 class="text brand_title">the brand <span class="brand_subtitle">of luxerious <span
-                            class="brand_subtitle__pink">fashion</span"></span>
-                </h1>
+
+    <section class="preheader ">
+        <div class="container">
+            <h2 class="text preheader_text">registration</h2>
+        </div>
+    </section>
+
+    <section class="registration container">
+        <form action="" method="post" class="text registration_form">
+            <fieldset class="registration_field">
+                <legeng>Your Name</legeng>
+                <input type="text" class="registration_input" placeholder="First Name">
+                <input type="text" class="registration_input" placeholder="Last Name">
+            </fieldset>
+            <div class="registration_radiobuttons">
+                <input type="radio" name="contact" value="Male" class="registration_radio">
+                <label class="text radio_label">Male</label>
+                <input type="radio" name="contact" value="Female" class="registration_radio"><label
+                    class="text">Female</label>
             </div>
 
-        </section>
-        <section class="offers container">
-            <h2 class="visually-hidden">Offers</h2>
-            <ul class="offers_list">
-                <li class="offers_item offers_item__woman ">
-                    <div>
-                        <h3 class="text offers_title">30% off</h3>
-                        <p class="text offers_subtitle">for women</p>
-                    </div>
+            <fieldset class="registration_field">
+                <legeng>Login details</legeng>
+                <input type="text" class="registration_input" placeholder="Email">
+                <input type="text" class="registration_input" placeholder="Password">
+            </fieldset>
+            <label for="" class="text registraion_label">Please use 8 or more characters, with at least 1 number and
+                a
+                mixture of uppercase and lowercase letters</label>
+
+
+            <button type="submit" class="registration_button">join now
+                <svg class="registration_button__arrow" width="25" height="18" viewBox="0 0 25 18" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <g filter="url(#filter0_d)">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M15.54 0.208095C15.6058 0.142131 15.684 0.0897967 15.77 0.0540883C15.8561 0.01838 15.9483 0 16.0415 0C16.1347 0 16.2269 0.01838 16.313 0.0540883C16.399 0.0897967 16.4772 0.142131 16.543 0.208095L20.7929 4.458C20.8589 4.5238 20.9112 4.60196 20.9469 4.68802C20.9826 4.77407 21.001 4.86632 21.001 4.95949C21.001 5.05266 20.9826 5.14491 20.9469 5.23097C20.9112 5.31702 20.8589 5.39518 20.7929 5.46098L16.543 9.71089C16.41 9.84389 16.2296 9.91861 16.0415 9.91861C15.8534 9.91861 15.673 9.84389 15.54 9.71089C15.407 9.57788 15.3323 9.39749 15.3323 9.2094C15.3323 9.0213 15.407 8.84091 15.54 8.70791L19.2898 4.95949L15.54 1.21107C15.474 1.14528 15.4217 1.06711 15.386 0.981059C15.3503 0.895005 15.3319 0.802752 15.3319 0.709584C15.3319 0.616415 15.3503 0.524162 15.386 0.438109C15.4217 0.352055 15.474 0.273891 15.54 0.208095Z"
+                            fill="white" />
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M4 4.95948C4 4.77162 4.07463 4.59146 4.20746 4.45862C4.3403 4.32579 4.52046 4.25116 4.70832 4.25116H19.583C19.7708 4.25116 19.951 4.32579 20.0838 4.45862C20.2167 4.59146 20.2913 4.77162 20.2913 4.95948C20.2913 5.14734 20.2167 5.3275 20.0838 5.46033C19.951 5.59317 19.7708 5.6678 19.583 5.6678H4.70832C4.52046 5.6678 4.3403 5.59317 4.20746 5.46033C4.07463 5.3275 4 5.14734 4 4.95948Z"
+                            fill="white" />
+                    </g>
+                    <defs>
+                        <filter id="filter0_d" x="0" y="0" width="25.001" height="17.9186" filterUnits="userSpaceOnUse"
+                            color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                            <feColorMatrix in="SourceAlpha" type="matrix"
+                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" />
+                            <feOffset dy="4" />
+                            <feGaussianBlur stdDeviation="2" />
+                            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                        </filter>
+                    </defs>
+                </svg>
+            </button>
+
+
+
+        </form>
+
+        <div class="information text">
+            <h2 class="information_title">LOYALTY HAS ITS PERKS</h2>
+            <p class="information_text">Get in on the loyalty program where you can earn points and unlock serious
+                perks. Starting with these as soon as you
+                join:</p>
+            <ul class="information_list text">
+                <li class="information_item">15% off welcome offer
                 </li>
-                <li class="offers_item offers_item__man ">
-                    <div>
-                        <h3 class="text offers_title">hot deal</h3>
-                        <p class="text offers_subtitle">for men</p>
-                    </div>
+                <li class="information_item">Free shipping, returns and exchanges on all orders
                 </li>
-                <li class="offers_item offers_item__kids ">
-                    <div>
-                        <h3 class="text offers_title">new arrivals</h3>
-                        <p class="text offers_subtitle">for kids</p>
-                    </div>
+                <li class="information_item">$10 off a purchase on your birthday
                 </li>
-                <li class="offers_item offers_item__accesories ">
-                    <div>
-                        <h3 class="text offers_title">luxerious & trendy</h3>
-                        <p class="text offers_subtitle">accessories</p>
-                    </div>
-                </li>
+                <li class="information_item">Early access to products</li>
+                <li class="information_item">Exclusive offers & rewards</li>
             </ul>
-        </section>
-        <section class="products container">
-            <h2 class="text products_title">Featured Items</h2>
-            <p class="text products_subtitle">Shop for items based on what we featured in this week</p>
-            <ul class="products_list">
-                <li class="products_item">
+        </div>
 
-                    <img src="./img/product1.jpg" alt="products image" class="products_image">
-                    <div class="products_card-about">
-                        <h3 class="text products_card-title">ellery x m'o capsule</h3>
-                        <p class="text products_text">Known for her sculptural takes on traditional tailoring,
-                            Australian
-                            arbiter
-                            of cool Kym
-                            Ellery
-                            teams up with Moda Operandi.</p>
-                        <p class="text products_price">$52.00</p>
-                    </div>
-                </li>
-                <li class="products_item">
+    </section>
 
-                    <img src="./img/product2.jpg" alt="products image" class="products_image">
-                    <div class="products_card-about">
-                        <h3 class="text products_card-title">ellery x m'o capsule</h3>
-                        <p class="text products_text">Known for her sculptural takes on traditional tailoring,
-                            Australian
-                            arbiter
-                            of cool Kym Ellery
-                            teams up with Moda Operandi.</p>
-                        <p class="text products_price">$52.00</p>
-                    </div>
-                </li>
-                <li>
-                </li>
-                <li class="products_item">
 
-                    <img src="./img/product3.jpg" alt="products image" class="products_image">
-                    <div class="products_card-about">
-                        <h3 class="text products_card-title">ellery x m'o capsule</h3>
-                        <p class="text products_text">Known for her sculptural takes on traditional tailoring,
-                            Australian
-                            arbiter
-                            of cool Kym Ellery
-                            teams up with Moda Operandi.</p>
-                        <p class="text products_price">$52.00</p>
-                    </div>
-                </li>
-                <li class="products_item">
 
-                    <img src="./img/product4.jpg" alt="products image" class="products_image">
-                    <div class="products_card-about">
-                        <h3 class="text products_card-title">ellery x m'o capsule</h3>
-                        <p class="text products_text">Known for her sculptural takes on traditional tailoring,
-                            Australian
-                            arbiter
-                            of cool Kym
-                            Ellery
-                            teams up with Moda Operandi.</p>
-                        <p class="text products_price">$52.00</p>
-                    </div>
-                </li>
-                <li class="products_item">
-
-                    <img src="./img/product5.jpg" alt="products image" class="products_image">
-                    <div class="products_card-about">
-                        <h3 class="text products_card-title">ellery x m'o capsule</h3>
-                        <p class="text products_text">Known for her sculptural takes on traditional tailoring,
-                            Australian
-                            arbiter
-                            of cool Kym
-                            Ellery
-                            teams up with Moda Operandi.</p>
-                        <p class="text products_price">$52.00</p>
-                    </div>
-                </li>
-                <li class="products_item">
-
-                    <img src="./img/product6.jpg" alt="products image" class="products_image">
-                    <div class="products_card-about">
-                        <h3 class="text products_card-title">ellery x m'o capsule</h3>
-                        <p class="text products_text">Known for her sculptural takes on traditional tailoring,
-                            Australian
-                            arbiter
-                            of cool Kym
-                            Ellery
-                            teams up with Moda Operandi.</p>
-                        <p class="text products_price">$52.00</p>
-                    </div>
-                </li>
-            </ul>
-            <a href="#" class="text products_button ">Browse All Products</a>
-        </section>
-        <section class="attract ">
-            <div class="container">
-                <ul class="attract_list">
-                    <li class="attract_item">
-                        <img src="img/Forma 1.svg " width="45" height="32" alt="">
-                        <h3 class="text attract_title">Free Delivery</h3>
-                        <p class="text attract_text">Worldwide delivery on all. Authorit tively morph next-generation
-                            innov
-                            tion with extensive
-                            models.</p>
-                    </li>
-                    <li class="attract_item">
-                        <img src="img/Forma 1 (1).svg" width="40" height="40" alt="">
-                        <h3 class="text attract_title">Sales & discounts</h3>
-                        <p class="text attract_text">Worldwide delivery on all. Authorit tively morph next-generation
-                            innov
-                            tion with extensive
-                            models.</p>
-                    </li>
-                    <li class="attract_item">
-                        <img src="img/Forma 1 (2).svg" width="47" height="35" alt="">
-                        <h3 class="text attract_title">Quality assurance</h3>
-                        <p class="text attract_text">Worldwide delivery on all. Authorit tively morph next-generation
-                            innov
-                            tion with extensive
-                            models.</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-    </main>
     <footer>
         <section class="subscribe_page ">
             <div class="subscribe container">
@@ -356,6 +281,9 @@
             </div>
         </section>
     </footer>
+
+
+
 </body>
 
 </html>
